# EasyCppTools

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  main.cpp
.VSCodeCounter/2022-12-24_00-00-44/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
include/: easycpptools.h
src/: CMakeLists.txt  dataSorting.cpp  dataSorting.hpp  json.cpp  json.h  md5.cpp  md5.h  mdtransform.hpp  parser.cpp  parser.h
test/: test.json
